shogun-core dump

--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shogun-D3 - Decentralized Chat</title>
+    <title>d3 - Decentralized Chat</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         .gradient-bg {
@@ -135,7 +135,7 @@
                             <div class="h-3 w-3 bg-green-500 rounded-full"></div>
                             <div class="ml-4 flex items-center space-x-2">
                                 <img src="logo.svg" alt="Shogun" class="h-5 w-5" />
-                                <span class="text-sm font-medium text-gray-700">Shogun-D3 Chat</span>
+                                <span class="text-sm font-medium text-gray-700">d3</span>
                             </div>
                         </div>
                         
